--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">Forget Password Backend</string>
+    <string name="app_name">YourApp</string>
+    <string-array name="countries_array">
+        <item>United States</item>
+        <item>Canada</item>
+        <item>United Kingdom</item>
+        <item>Australia</item>
+        <item>India</item>
+        <item>Germany</item>
+        <item>France</item>
+        <item>Japan</item>
+        <item>Philippines</item>
+    </string-array>
 </resources>
